--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/fathurr.fr86@gmail.com" method="POST">
+                    <form action="https://formspree.io/f/mzbkrqqo" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
@@ -295,7 +295,7 @@
     </div>
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/fathurarek.laros/"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/fthrr12/?hl=id"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
-      <div class="h4 title text-center">Fathur Rohman</div>
+      <div class="h4 title text-center">-----------------</div>
       <div class="text-center text-muted">
         <p>&copy; FathurRL.<br>Design - <a class="credit" href="https://www.instagram.com/fthrr12/?hl=id" target="_blank">@fthrr12</a></p>
       </div>
