--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/pemandangan.jpg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/IMG_1126.JPG" lt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/cv.jpg" lt="Image"/></a></div>
           <div class="h2 title">Fathur Rohman</div>
           <p class="category text-white">Secret Fans | Just Potato | Keep Silent</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a>
         </div>
