--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Street KH. Hasyim Ashari no. 74, North Rogojampi, Rogojampi, Banyuwangi.</div>
+              <div class="col-sm-8">KH. Hasyim Ashari Street no. 74, North Rogojampi, Rogojampi, Banyuwangi.</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Hobby:</strong></div>
@@ -109,7 +109,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Corel Draw</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
               </div>
             </div>
           </div>
@@ -280,7 +280,7 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">Street KH. Hasyim Ashari no. 74, North Rogojampi, Rogojampi, Banyuwangi</p>
+                    <p class="pb-2">KH. Hasyim Ashari Street no. 74, North Rogojampi, Rogojampi, Banyuwangi</p>
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">+62 8523 2014 102</p>
                     <p class="mb-0"><strong>Email</strong></p>
