--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Hobby:</strong></div>
-              <div class="col-sm-8">Playing guitar and Sing.</div>
+              <div class="col-sm-8">Playing guitar and Singing.</div>
             </div>
           </div>
         </div>
