ngilangi tahun lahir

--- a/index.html
+++ b/index.html
@@ -67,13 +67,9 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">Basic Information</div>
-            <div class="row">
-              <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">19</div>
-            </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Birthday:</strong></div>
-              <div class="col-sm-8">12 - July - 2001</div>
+              <div class="col-sm-8">12 - July</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
