--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About Me</div>
-            <p>Hello! I am Fathur Rohman my nickname is Fathur. I studied at Politeknik Negeri Banyuwangi majoring in D-3 Informatics Engineering in 2020. <a href="https://www.poliwangi.ac.id/" target="_blank">Learn More <a>about POLIWANGI</a></p>
+            <p>Hello! I am Fathur Rohman my nickname is Fathur. I am studying at the Banyuwangi State Polytechnic majoring in D-4 software engineering technology in 2020. <a href="https://www.poliwangi.ac.id/" target="_blank">Learn More <a>about POLIWANGI</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
